--- a/assest/css/main.css
+++ b/assest/css/main.css
@@ -57,6 +57,107 @@
     padding: 0 20px;
 }
 
+
+/* ==========menu__mobile======= */
+
+.nav__input {
+    display: none;
+}
+
+.nav__input:checked~.header__main-category--overlay {
+    display: block;
+}
+
+.nav__input:checked~.nav__mobile {
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.header__main-category-mobile-tablet:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.header__main-category--overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+}
+
+.nav__mobile {
+    position: fixed;
+    top: var(--header);
+    left: 0;
+    width: 300px;
+    max-width: 100%;
+    z-index: 10;
+    background-color: var(--black-color);
+    border-top: 1px solid rgb(255, 255, 255, 0.1);
+    box-shadow: 0 0 2px 2px rgb(0, 0, 0, 0.05);
+    transform: translateX(-100%);
+    transition: all 0.5s ease;
+    opacity: 0;
+}
+
+.nav__mobile-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0;
+}
+
+.nav__mobile-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.nav__mobile-close--icon {
+    font-size: 2rem;
+    color: var(--white-color);
+    padding: 4px;
+}
+
+.nav__mobile-close--icon:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.header__main-menu-mobile {
+    margin-top: 10px;
+}
+
+.header__main-menu-mobile-item:hover .header__main-menu-mobile-link {
+    background-color: var(--white-color);
+    color: var(--text-color);
+    font-weight: 500;
+    transition: all 0.2s ease;
+}
+
+.header__main-menu-mobile-item {
+    position: relative;
+}
+
+.header__main-menu-mobile-link {
+    display: block;
+    font-size: 1.4rem;
+    width: 100%;
+    height: 100%;
+    color: var(--white-color);
+    text-transform: uppercase;
+    border-top: 1px solid rgb(255, 255, 255, 0.1);
+    padding: 12px 16px;
+}
+
+.sub__menu-mobile {
+    position: absolute;
+}
+
 .header__main-logo {
     width: 160px;
 }
@@ -69,6 +170,9 @@
     text-transform: uppercase;
     border: 1px solid #eeba81;
     padding: 8px 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header__main-logo-text {
@@ -178,12 +282,16 @@
     padding: 4px;
     display: inline-block;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header__main-search-wrap:hover .header__search-input-wrap {
     display: flex;
     top: var(--header);
     opacity: 1;
+    /* user-select: none;
+    -webkit-user-select: none; */
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header__search-input-wrap {
@@ -198,6 +306,9 @@
     justify-content: center;
     opacity: 0;
     transition: all 1s ease;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .header__search-input-body {
@@ -373,6 +484,7 @@
     margin-top: var(--header);
     height: 600px;
     overflow: hidden;
+    position: relative;
 }
 
 .sliders {
@@ -387,10 +499,6 @@
 
 
 /* ===========500:100=5*20=100 =>width: 20%;============ */
-
-.slidershow {
-    position: relative;
-}
 
 .slider {
     width: 20%;
@@ -454,6 +562,9 @@
     cursor: pointer;
     border-radius: 2px;
     transition: 0.5s;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .nav_slider .bar:first-child {
@@ -508,6 +619,10 @@ sẽ đẩy mất slider1 */
 
 .support__item-text:hover .support__item-icon i {
     color: var(--primary-color);
+    transition: all 0.5s ease;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .support__item-text:hover {
@@ -516,6 +631,10 @@ sẽ đẩy mất slider1 */
 
 .support__item-text:hover .support__item-name {
     color: var(--primary-color);
+    transition: all 0.5s ease;
+    /* user-select: none;
+    -webkit-user-select: none */
+    -webkit-tap-highlight-color: transparent;
 }
 
 .product {
@@ -551,6 +670,9 @@ sẽ đẩy mất slider1 */
     margin: 20px 0;
     box-shadow: 0 0 1px 2px rgb(0, 0, 0, 0.02);
     transition: transform 0.2s ease;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .product__item:hover {
@@ -669,7 +791,10 @@ sẽ đẩy mất slider1 */
     justify-content: center;
     margin: 2px;
     background-color: var(--text-color);
-    transition: 0.5s;
+    transition: all 0.5s ease;
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .feature__page--active {
@@ -694,6 +819,9 @@ sẽ đẩy mất slider1 */
     display: block;
     margin: 20px 0;
     box-shadow: 0 0 1px 2px rgb(0, 0, 0, 0.02);
+    user-select: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .share__img {
